Replace deprecated wrapper constructors