@@ -355,7 +355,7 @@ class AltBtree<T> extends PersistentCollection<T> implements Index<T> {
         }
 
         Object getKeyValue(int i) { 
-            return new Byte(data[i]);
+            return Byte.valueOf(data[i]);
         }
 
         Key getKey(int i) { 
@@ -417,7 +417,7 @@ class AltBtree<T> extends PersistentCollection<T> implements Index<T> {
         }
 
         Object getKeyValue(int i) { 
-            return new Short(data[i]);
+            return Short.valueOf(data[i]);
         }
 
         BtreePage clonePage() { 
@@ -455,7 +455,7 @@ class AltBtree<T> extends PersistentCollection<T> implements Index<T> {
         }
 
         Object getKeyValue(int i) { 
-            return new Character(data[i]);
+            return Character.valueOf(data[i]);
         }
 
         BtreePage clonePage() { 
@@ -493,7 +493,7 @@ class AltBtree<T> extends PersistentCollection<T> implements Index<T> {
         }
 
         Object getKeyValue(int i) { 
-            return new Integer(data[i]);
+            return Integer.valueOf(data[i]);
         }
 
         BtreePage clonePage() { 
@@ -531,7 +531,7 @@ class AltBtree<T> extends PersistentCollection<T> implements Index<T> {
         }
 
         Object getKeyValue(int i) { 
-            return new Long(data[i]);
+            return Long.valueOf(data[i]);
         }
 
         BtreePage clonePage() { 
@@ -569,7 +569,7 @@ class AltBtree<T> extends PersistentCollection<T> implements Index<T> {
         }
 
         Object getKeyValue(int i) { 
-            return new Float(data[i]);
+            return Float.valueOf(data[i]);
         }
 
         BtreePage clonePage() { 
@@ -607,7 +607,7 @@ class AltBtree<T> extends PersistentCollection<T> implements Index<T> {
         }
 
         Object getKeyValue(int i) { 
-            return new Double(data[i]);
+            return Double.valueOf(data[i]);
         }
 
         BtreePage clonePage() { 
